--- a/src/app/pages/batalha-fogo/batalha-fogo.page.html
+++ b/src/app/pages/batalha-fogo/batalha-fogo.page.html
@@ -1,4 +1,4 @@
-<ion-content class="ion-no-padding">
+<ion-content class="ion-no-padding"  style="background-color: burlywood;">
   <div class="stars"></div>
 
   <!-- MENU -->
